--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "server.js",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "nodemon server.js"
   },
   "repository": {
     "type": "git",
@@ -19,16 +20,25 @@
   "homepage": "https://github.com/guru-bandike/auth-system#readme",
   "dependencies": {
     "bcrypt": "^5.1.1",
+    "bullmq": "^5.21.2",
+    "connect-flash": "^0.1.1",
+    "connect-mongo": "^5.1.0",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
     "dotenv": "^16.4.5",
+    "ejs": "^3.1.10",
     "express": "^4.21.0",
+    "express-ejs-layouts": "^2.5.1",
+    "express-session": "^1.18.1",
     "express-useragent": "^1.0.15",
     "express-validator": "^7.0.1",
-    "jsonwebtoken": "^9.0.2",
+    "ioredis": "^5.4.1",
     "mongodb": "^6.7.0",
     "mongoose": "^8.4.3",
     "nodemailer": "^6.9.15",
+    "passport": "^0.7.0",
+    "passport-google-oauth20": "^2.0.0",
+    "passport-local": "^1.0.0",
     "winston": "^3.13.0"
   },
   "devDependencies": {
